recursion.cons.ismember.IsMember.scala.error
Compilation error:
IsMember:5: error: type mismatch;
 found   : Int(0)
 required: Boolean
    return 0;
           ^IsMember:12: error: overloaded method value + with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int <and>
  (x: String)String
 cannot be applied to (Boolean)
       return 1 + isMember(l.tail, v);
                ^IsMember:17: error: not found: value iMember
      return iMember(l.tail, v);
             ^