recursion.cons.ismember.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  
  if(l == Nil){
    return 0;
  }
  
  else{
    if(l.head == v)
    {
      
       return 1 + isMember(l.tail, v);
      
    }
    else{
      
      return iMember(l.tail, v);
      
    }
   
  }
  
}